--- a/layouts/style.css
+++ b/layouts/style.css
@@ -62,7 +62,7 @@ h1 {
     padding: 20px;
     border-radius: 20px;
     text-align: center;
-    transition: 0,5s;
+    transition: 0.5s;
     margin: 20px 400px;
 }
 
@@ -71,7 +71,7 @@ h1 {
     color: #333;
     border: 4px solid #e8aac9;
     transform: translateY(-3px);
-    padding: 10px;
+    padding: 25px;
 }
 .secaolayouts{
     max-width: 700px;
@@ -85,7 +85,7 @@ h1 {
     width: 100px;
     text-align: center;
     padding: 20px;
-    transition: 0,5s;
+    transition: 0.5s;
     justify-content: center;
     justify-items: center;
 }
@@ -97,7 +97,7 @@ h1 {
 }
 
 .botaomenu a {
-    color: #7d95ff;
+    color: #333;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
