ADD - correção nos botoes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,4 +35,7 @@
     </div>
 
 </body>
+<footer>
+    Site feito com intuito educacional. Todos os direitos reservados a Caio Mafra.
+</footer>
 </html>
