ADD - nova fonte e correções nos hovers

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>menu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-        <h1>layouts</h1>
+        <h1>LAYOUTS</h1>
         <section id="secaolayouts">
         <div class="grid">
             <a href="layout1.html" class="botao">Layout 1</a>
