--- a/layouts/layout6.html
+++ b/layouts/layout6.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <title>layout2</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
     </div>
 
     <div class="botaomenu">
-            <a href="index.html">Menu</a>
+            <a href="index.html">MENU</a>
     </div>
 
 </body>
