--- a/layouts/style.css
+++ b/layouts/style.css
@@ -37,7 +37,7 @@
 body {
     background-color: #7d95ff;
     padding: 50px 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Fredoka', sans-serif;
 }
 
 h1 {
@@ -53,6 +53,7 @@ h1 {
 .grid {
     display: grid;
     gap: 15px;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .botao {
@@ -63,23 +64,21 @@ h1 {
     border-radius: 20px;
     text-align: center;
     transition: 0.5s;
-    margin: 20px 400px;
+    margin:20 20;
 }
 
 .botao:hover {
-    background-color: white;
+    background-color: #e8aac9;
     color: #333;
-    border: 4px solid #e8aac9;
     transform: translateY(-3px);
-    padding: 25px;
 }
 .secaolayouts{
-    max-width: 700px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
 .botaomenu{
-    background-color: #e8aac9;
+    background-color: #333;
     border-radius: 15px;
     margin: 40px auto;
     width: 100px;
@@ -88,19 +87,20 @@ h1 {
     transition: 0.5s;
     display: block;
     width: 120px;
+    
 }
 
 .botaomenu:hover{
     background-color: #333;
     color: antiquewhite;
     transform: translateY(-3px);;
+    border-radius: 20px;
 }
 
 .botaomenu a {
-    color: #333;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #f8f8f8;
+    
 }
-
 .botaomenu:hover a {
     color: #f8f8f8;
 }
