ADD - interatividade com os layouts por um hover que muda as cores

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -34,8 +34,8 @@
         </div>
     </div>
 
+    <div id="footerindex">Site feito com intuito educacional. Todos os direitos reservados a Caio Mafra.
+</footer></div>
+
 </body>
-<footer>
-    Site feito com intuito educacional. Todos os direitos reservados a Caio Mafra.
-</footer>
 </html>
