--- a/layouts/style.css
+++ b/layouts/style.css
@@ -4,6 +4,7 @@
     margin: 20;
     background-color: #e8aac9;
     border-radius: 15px;
+    transition: 0.3s;
 }
 .flex{
     display: flex;
@@ -15,6 +16,7 @@
     background-color: #e8aac9;
     padding-right: 190;
     border-radius: 15px;
+    transition: 0.3s;
 }
 .yobasso{
     padding: 50;
@@ -22,6 +24,7 @@
     background-color: #e8aac9;
     padding-bottom: 190;
     border-radius: 15px;
+    transition: 0.3s;
 }
 
 .m_upzero{
@@ -38,6 +41,8 @@ body {
     background-color: #7d95ff;
     padding: 50px 20px;
     font-family: 'Fredoka', sans-serif;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 
@@ -109,4 +114,15 @@ h1 {
 
 footer {
     margin-top: auto;
+}
+
+.yo:hover{
+    background-color: #e47aaf;
+}
+
+.yoside:hover{
+    background-color: #e47aaf;
+}
+.yobasso:hover{
+    background-color: #e47aaf;
 }
